src/objects/FSTR__Test_PCE_Step__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <description>Object used in the ProcessComposer test cases as an example of a non &quot;salesforce task&quot; step.</description>
    <fields>
        <fullName>FSTR__AlreadyGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AlreadyGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval</label>
        <referenceTo>FSTR__PCE_Approval__c</referenceTo>
        <relationshipLabel>Test PCE Steps</relationshipLabel>
        <relationshipName>Test_PCE_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Auto_Close__c</fullName>
        <label>Auto Close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Business_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Test_BPD_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Test CO Steps</relationshipLabel>
        <relationshipName>Test_PCE_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Test CO Steps</relationshipLabel>
        <relationshipName>Test_PCE_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist</label>
        <referenceTo>FSTR__PCE_Checklist__c</referenceTo>
        <relationshipLabel>Test CO Steps</relationshipLabel>
        <relationshipName>Test_PCE_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Test_BPD_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Test CO Steps</relationshipLabel>
        <relationshipName>Test_PCE_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FSTR__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__Email_Queue_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field used to trigger a workflow rule to send an email to queue members when a Test PCE Step is created.</description>
        <inlineHelpText>field used to trigger a workflow rule to send an email to queue members when a Test PCE Step is created.</inlineHelpText>
        <label>Email Queue Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Test CO Steps</relationshipLabel>
        <relationshipName>Test_PCE_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Test CO Steps</relationshipLabel>
        <relationshipName>Test_PCE_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Event_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Object_Name__c</fullName>
        <description>This fields holds the object API name of the parent object for the process it is a part of.  This is used to facilitate link this object to multiple types of parent objects.</description>
        <label>Parent Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Instance</label>
        <referenceTo>FSTR__Process_Instance__c</referenceTo>
        <relationshipLabel>Test PCE Steps</relationshipLabel>
        <relationshipName>Test_PCE_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Step_Id__c</fullName>
        <label>Step Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Stage_Id__c</fullName>
        <label>Step Stage Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Test_Number_Field__c</fullName>
        <label>Test Number Field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Test_PCE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test PCE</label>
        <referenceTo>FSTR__Test_PCE__c</referenceTo>
        <relationshipLabel>Test CO Steps (Test CO)</relationshipLabel>
        <relationshipName>Test_PCE_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__step_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Step that this object was created from.</description>
        <inlineHelpText>Link to the Step that this object was created from.</inlineHelpText>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Test CO Steps</relationshipLabel>
        <relationshipName>Test_PCE_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test PCE Step</label>
    <nameField>
        <label>Test PCE Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test PCE Steps</pluralLabel>
    <recordTypes>
        <fullName>FSTR__Test_Record_Type_1</fullName>
        <active>true</active>
        <label>Test Record Type 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSTR__Test_Record_Type_2</fullName>
        <active>true</active>
        <label>Test Record Type 2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>